while creating slider

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Reliability Solutions - The Art of Prediction</title>
+    <title>Sam niewiem co to</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
@@ -24,6 +24,37 @@
             <img src="./img/united-kingdom-flag-round-icon-32.png" alt="UK flag">
         </div>
     </nav>
+    <section class="slider">
+        <ul>
+            <li class="slide">
+                <div class="arrow">
+                    <i class="fas fa-arrow-left fa-3x"></i>
+                </div>
+                <img src="./img/Slajder-3-Laboratorium-1920x1050.jpg" alt="jeden">
+                <div class="arrow">
+                    <i class="fas fa-arrow-right fa-3x"></i>
+                </div>
+            </li>
+            <li class="slide">
+                <div class="arrow">
+                    <i class="fas fa-arrow-left fa-3x"></i>
+                </div>
+                <img src="./img/laboratorium-21968734.jpg" alt="dwa">
+                <div class="arrow">
+                    <i class="fas fa-arrow-right fa-3x"></i>
+                </div>
+            </li>
+            <li class="slide">
+                <div class="arrow">
+                    <i class="fas fa-arrow-left fa-3x"></i>
+                </div>
+                <img src="./img/images.jpg" alt="trzy">
+                <div class="arrow">
+                    <i class="fas fa-arrow-right fa-3x"></i>
+                </div>
+            </li>
+        </ul>
+    </section>
 </body>
 
 </html>
