--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
         <h1 class="primary-header">Aktualoności</h1>
         <div class="row">
             <div class="col">
-                <ul>
-                    <li>
-                        <h3>O nas</h3>
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="#">O nas</a>
                     </li>
-                    <li>
-                        <h3>Oferta</h3>
+                    <li class="nav-item">
+                        <a href="#">Oferta</a>
                     </li>
-                    <li>
-                        <h3>Technologie/materiały</h3>
+                    <li class="nav-item">
+                        <a href="#">Technologie/materiały</a>
                     </li>
-                    <li>
-                        <h3>Realizacje/referencje</h3>
+                    <li class="nav-item">
+                        <a href="#">Realizacje/referencje</a>
                     </li>
-                    <li>
-                        <h3>Do pobrania</h3>
+                    <li class="nav-item">
+                        <a href="#">Do pobrania</a>
                     </li>
-                    <li>
-                        <h3>Kontakt</h3>
+                    <li class="nav-item">
+                        <a href="#">Kontakt</a>
                     </li>
                 </ul>
             </div>
