finished main page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <h1 class="primary-header">Aktualoności</h1>
         <div class="row">
-            <div class="col">
+            <div class="col col-2">
                 <ul class="nav-list">
                     <li class="nav-item">
                         <a href="#">O nas</a>
@@ -61,10 +61,44 @@
                     </li>
                 </ul>
             </div>
-            <div class="col"></div>
-            <div class="col"></div>
+            <div class="col col-3">
+                <div class="col-content">
+                    <h2>News</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt turpis et nulla vulputate tempor. Praesent felis nulla,
+                        ultricies ut tortor ac, lacinia ullamcorper elit. Aliquam convallis consequat turpis eget vehicula.
+                        Nullam dictum urna ac purus volutpat, vel accumsan arcu ultrices. Etiam nec sodales ante, quis tincidunt
+                        nisi. Curabitur dapibus diam at diam hendrerit euismod. Donec ut aliquet lacus. Cras viverra sagittis
+                        felis. Pellentesque id nibh et ex bibendum tincidunt eget ac leo. Proin sapien eros, vehicula in
+                        egestas nec, maximus quis urna. Aliquam eget pellentesque leo, ut malesuada urna.
+                    </p>
+                </div>
+            </div>
+            <div class="col col-2">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="#">Konfigurator systemów wyciszeń</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">Współpraca Shim-pol</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </main>
+    <footer>
+        <div class="row-special">
+            <div>
+                GMP LAB S.C
+                <br> ul.Józefa Brodowicza 6/6
+                <br> 31-518 Kraków
+            </div>
+            <div class="footer-icons">
+                <span class="fab fa-facebook-f fa-3x"></span>
+                <span class="fab fa-twitter fa-3x"></span>
+            </div>
+        </div>
+    </footer>
     <script>
         var slideIndex = 0;
         carousel();
