--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="container">
         <div class="row-special">
             <div>
                 GMP LAB S.C
