add some section to main page

--- a/index.html
+++ b/index.html
@@ -9,20 +9,24 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,700" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <nav class="container navbar">
-        <i class="fas fa-bars fa-2x"></i>
-        <div class="input-container">
-            <input type="text" class="search">
-            <span class="fas fa-search icon-inside"></span>
-        </div>
-        <div>
-            <img src="./img/poland-flag-round-icon-32.png" alt="flaga polski">
-            <img src="./img/united-kingdom-flag-round-icon-32.png" alt="UK flag">
+        <div class="row-special">
+            <i class="fas fa-bars fa-2x"></i>
+            <div class="input-container">
+                <input type="text" class="search">
+                <span class="fas fa-search icon-inside"></span>
+            </div>
+            <div>
+                <img src="./img/poland-flag-round-icon-32.png" alt="flaga polski">
+                <img src="./img/united-kingdom-flag-round-icon-32.png" alt="UK flag">
+            </div>
         </div>
     </nav>
     <section class="slider-wrapper">
@@ -40,7 +44,7 @@
             <button class="w3-button button-direct button-right" onclick="plusDivs(+1)" id="right">&#10095;</button>
         </div>
     </section>
-    <section class="container" id="content">
+    <section class="container container-gray" id="content">
         <div class="logo">
             <img src="./img/logo.png" alt="logo">
         </div>
@@ -70,7 +74,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col col-3">
+            <div class="col col-3 col-orange">
                 <div class="col-content">
                     <h2>News</h2>
                     <p>
@@ -95,6 +99,24 @@
             </div>
         </div>
     </main>
+    <section class="container section" id="about_us">
+        <h1>
+            O nas
+        </h1>
+        <p class="section-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet maximus leo. Aliquam ex nisi, venenatis sed maximus
+            vulputate, accumsan vitae urna. Praesent ullamcorper varius tellus sit amet facilisis. Aenean iaculis efficitur
+            massa tincidunt hendrerit. Fusce vel rhoncus risus, sit amet imperdiet quam. Curabitur mollis augue nulla, vel
+            pharetra sem sagittis non. Fusce condimentum gravida egestas. Pellentesque neque mi, aliquam malesuada suscipit
+            ut, pellentesque id mauris. Morbi efficitur vulputate dolor id accumsan. Praesent et elementum magna, eu finibus
+            nibh. Nunc malesuada eu lacus vel hendrerit. Nunc rhoncus commodo volutpat. Suspendisse et cursus ligula. Mauris
+            quis nibh ex. Pellentesque dignissim tristique urna vitae condimentum. Duis scelerisque iaculis leo, a sagittis
+            augue suscipit viverra.
+        </p>
+    </section>
+    <section class="container section">
+
+    </section>
     <footer class="container">
         <div class="row-special">
             <div>
