finished about us section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
         </div>
     </main>
-    <section class="container section" id="about_us">
+    <section class="container column section" id="about_us">
         <h1>
             O nas
         </h1>
