add some good stuff

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 </head>
 
 <body>
+    <div class="offer sticky">
+        <div class="short-row orange-text">
+                <span class="orange-text">Zapoznaj się z naszą ofertą</span>
+                <a href="#" class="to-offer">Kliknij tutaj</a>
+        </div>
+    </div>
     <nav class="container navbar">
         <div class="row-special">
             <i class="fas fa-bars fa-2x"></i>
@@ -56,9 +62,6 @@
                 <ul class="nav-list">
                     <li class="nav-item">
                         <a href="#">O nas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#">Oferta</a>
                     </li>
                     <li class="nav-item">
                         <a href="#">Technologie/materiały</a>
@@ -114,8 +117,11 @@
             augue suscipit viverra.
         </p>
     </section>
-    <section class="container section">
+    <section class="container column section" id="materials">
+        <h1>Materiały/Technologie</h1>
+        <div class="gallery">
 
+        </div>
     </section>
     <footer class="container">
         <div class="row-special">
