--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <button class="w3-button button-direct button-right" onclick="plusDivs(+1)" id="right">&#10095;</button>
         </div>
     </section>
-    <section class="container container-gray" id="content">
+    <section class="container " id="content">
         <div class="logo">
             <img src="./img/logo.png" alt="logo">
         </div>
