--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="offer sticky">
         <div class="short-row orange-text">
-                <span class="orange-text">Zapoznaj się z naszą ofertą</span>
-                <a href="#" class="to-offer">Kliknij tutaj</a>
+            <span class="orange-text">Zapoznaj się z naszą ofertą</span>
+            <a href="#" class="to-offer">Kliknij tutaj</a>
         </div>
     </div>
     <nav class="container navbar">
@@ -36,19 +35,7 @@
         </div>
     </nav>
     <section class="slider-wrapper">
-        <div class="slider" id="slider">
-            <button class="w3-button button-direct button-left" onclick="plusDivs(-1)" id="left">&#10094;</button>
-            <div class="mySlides">
-                <img src="./img/DSC_9903.jpg" alt="jeden" class="slide_image">
-            </div>
-            <div class="mySlides">
-                <img src="./img/DSC_9918.jpg" alt="dwa" class="slide_image">
-            </div>
-            <div class="mySlides">
-                <img src="./img/DSC_9920.jpg" alt="jeden" class="slide_image">
-            </div>
-            <button class="w3-button button-direct button-right" onclick="plusDivs(+1)" id="right">&#10095;</button>
-        </div>
+        
     </section>
     <section class="container " id="content">
         <div class="logo">
@@ -107,14 +94,15 @@
             O nas
         </h1>
         <p class="section-paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet maximus leo. Aliquam ex nisi, venenatis sed maximus
-            vulputate, accumsan vitae urna. Praesent ullamcorper varius tellus sit amet facilisis. Aenean iaculis efficitur
-            massa tincidunt hendrerit. Fusce vel rhoncus risus, sit amet imperdiet quam. Curabitur mollis augue nulla, vel
-            pharetra sem sagittis non. Fusce condimentum gravida egestas. Pellentesque neque mi, aliquam malesuada suscipit
-            ut, pellentesque id mauris. Morbi efficitur vulputate dolor id accumsan. Praesent et elementum magna, eu finibus
-            nibh. Nunc malesuada eu lacus vel hendrerit. Nunc rhoncus commodo volutpat. Suspendisse et cursus ligula. Mauris
-            quis nibh ex. Pellentesque dignissim tristique urna vitae condimentum. Duis scelerisque iaculis leo, a sagittis
-            augue suscipit viverra.
+                GMP LAB s.c. powstała w sierpniu 2018 roku jako odpowiedź na rosnące zapotrzebowanie na specjalistyczne meble do laboratoriów chemicznych i szybko stała się wypełnieniem niszy w tej branży na rynku polskim.
+                Misją firmy GMP LAB jest tworzenie mebli i akcesoriów laboratoryjnych na wymiar, pod konkretne, często nietypowe zastosowania. 
+                Pracujemy ze wszystkimi tworzywami sztucznymi, aluminium, stalą, laminatami - są to materiały najwyższej jakości od sprawdzonych dostawców. 
+                Nasze produkty w wysokim stopniu wyciszają pracę urządzeń laboratoryjnych, chłodząc je od środka za pomocą wentylatorów. 
+                Cechuje nas olbrzymia elastyczność - każdy Klient to dla nas osobne wyzwanie, które realizujemy pod jego dyktando dostarczając gotowy produkt w krótkim czasie.
+                Współpracujemy ze znanymi na rynku chemicznymi laboratoriami oraz największymi na rynku producentami sprzętu laboratoryjnego.
+                Polecamy siebie i nasze produkty! 
+                GMP LAB M.Kochanowska, M.Piskorz, P.Iwanek s.c.
+                
         </p>
     </section>
     <section class="container column section" id="materials">
@@ -137,6 +125,7 @@
         </div>
     </footer>
     <script src="./js/home.js"></script>
+    <script src="./js/slider.js"></script>
 </body>
 
 </html>
