add smooth scrolling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </nav>
     <section class="slider-wrapper">
-        
+
     </section>
     <section class="container " id="content">
         <div class="logo">
@@ -89,27 +89,44 @@
             </div>
         </div>
     </main>
+    <section class="flying-icons">
+        <a href="#">
+            <span class="fas fa-arrow-circle-up fa-3x">
+            </span>
+        </a>
+
+    </section>
     <section class="container column section" id="about_us">
         <h1>
             O nas
         </h1>
         <p class="section-paragraph">
-                GMP LAB s.c. powstała w sierpniu 2018 roku jako odpowiedź na rosnące zapotrzebowanie na specjalistyczne meble do laboratoriów chemicznych i szybko stała się wypełnieniem niszy w tej branży na rynku polskim.
-                Misją firmy GMP LAB jest tworzenie mebli i akcesoriów laboratoryjnych na wymiar, pod konkretne, często nietypowe zastosowania. 
-                Pracujemy ze wszystkimi tworzywami sztucznymi, aluminium, stalą, laminatami - są to materiały najwyższej jakości od sprawdzonych dostawców. 
-                Nasze produkty w wysokim stopniu wyciszają pracę urządzeń laboratoryjnych, chłodząc je od środka za pomocą wentylatorów. 
-                Cechuje nas olbrzymia elastyczność - każdy Klient to dla nas osobne wyzwanie, które realizujemy pod jego dyktando dostarczając gotowy produkt w krótkim czasie.
-                Współpracujemy ze znanymi na rynku chemicznymi laboratoriami oraz największymi na rynku producentami sprzętu laboratoryjnego.
-                Polecamy siebie i nasze produkty! 
-                GMP LAB M.Kochanowska, M.Piskorz, P.Iwanek s.c.
-                
+            GMP LAB s.c. powstała w sierpniu 2018 roku jako odpowiedź na rosnące zapotrzebowanie na specjalistyczne meble do laboratoriów
+            chemicznych i szybko stała się wypełnieniem niszy w tej branży na rynku polskim. Misją firmy GMP LAB jest tworzenie
+            mebli i akcesoriów laboratoryjnych na wymiar, pod konkretne, często nietypowe zastosowania. Pracujemy ze wszystkimi
+            tworzywami sztucznymi, aluminium, stalą, laminatami - są to materiały najwyższej jakości od sprawdzonych dostawców.
+            Nasze produkty w wysokim stopniu wyciszają pracę urządzeń laboratoryjnych, chłodząc je od środka za pomocą wentylatorów.
+            Cechuje nas olbrzymia elastyczność - każdy Klient to dla nas osobne wyzwanie, które realizujemy pod jego dyktando
+            dostarczając gotowy produkt w krótkim czasie. Współpracujemy ze znanymi na rynku chemicznymi laboratoriami oraz
+            największymi na rynku producentami sprzętu laboratoryjnego. Polecamy siebie i nasze produkty! GMP LAB M.Kochanowska,
+            M.Piskorz, P.Iwanek s.c.
+
         </p>
     </section>
     <section class="container column section" id="materials">
         <h1>Materiały/Technologie</h1>
-        <div class="gallery">
+        <p class="section-paragraph">
+            GMP LAB s.c. powstała w sierpniu 2018 roku jako odpowiedź na rosnące zapotrzebowanie na specjalistyczne meble do laboratoriów
+            chemicznych i szybko stała się wypełnieniem niszy w tej branży na rynku polskim. Misją firmy GMP LAB jest tworzenie
+            mebli i akcesoriów laboratoryjnych na wymiar, pod konkretne, często nietypowe zastosowania. Pracujemy ze wszystkimi
+            tworzywami sztucznymi, aluminium, stalą, laminatami - są to materiały najwyższej jakości od sprawdzonych dostawców.
+            Nasze produkty w wysokim stopniu wyciszają pracę urządzeń laboratoryjnych, chłodząc je od środka za pomocą wentylatorów.
+            Cechuje nas olbrzymia elastyczność - każdy Klient to dla nas osobne wyzwanie, które realizujemy pod jego dyktando
+            dostarczając gotowy produkt w krótkim czasie. Współpracujemy ze znanymi na rynku chemicznymi laboratoriami oraz
+            największymi na rynku producentami sprzętu laboratoryjnego. Polecamy siebie i nasze produkty! GMP LAB M.Kochanowska,
+            M.Piskorz, P.Iwanek s.c.
 
-        </div>
+        </p>
     </section>
     <footer class="container">
         <div class="row-special">
@@ -124,6 +141,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <script src="./js/home.js"></script>
     <script src="./js/slider.js"></script>
 </body>
