--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         <h1 class="primary-header">Aktualoności</h1>
         <div class="row">
             <div class="col col-1">
-                <ul class="nav-list">
+                <ul class="nav-list" id="main_site">
                     <li class="nav-item">
-                        <a href="#">O nas</a>
+                        <a href="#about_us">O nas</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Technologie/materiały</a>
+                        <a href="#materials">Technologie/materiały</a>
                     </li>
                     <li class="nav-item">
                         <a href="#">Realizacje/referencje</a>
