finished main page

--- a/index.html
+++ b/index.html
@@ -136,11 +136,12 @@
                     alt="" class="person-image">
                 <div class="short-paragraph">
                     <h2>Wesoły Janusz</h2>
-                    <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt turpis et nulla vulputate tempor.
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt turpis et nulla vulputate tempor.
                         Praesent felis nulla, ultricies ut tortor ac, lacinia ullamcorper elit. Aliquam convallis consequat
                         turpis eget vehicula. Nullam dictum urna ac purus volutpat, vel accumsan arcu ultrices. Etiam nec
                         sodales ante, quis tincidunt nisi. Curabitur dapibus diam at diam hendrerit euismod. Donec ut aliquet
-                        lacus.</p>
+                        lacus.
+                    </p>
                 </div>
             </div>
             <div class="reference">
@@ -148,11 +149,12 @@
                     alt="" class="person-image">
                 <div class="short-paragraph">
                     <h2>Wesoły Janusz</h2>
-                    <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt turpis et nulla vulputate tempor.
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt turpis et nulla vulputate tempor.
                         Praesent felis nulla, ultricies ut tortor ac, lacinia ullamcorper elit. Aliquam convallis consequat
                         turpis eget vehicula. Nullam dictum urna ac purus volutpat, vel accumsan arcu ultrices. Etiam nec
                         sodales ante, quis tincidunt nisi. Curabitur dapibus diam at diam hendrerit euismod. Donec ut aliquet
-                        lacus.</p>
+                        lacus.
+                    </p>
                 </div>
             </div>
             <div class="reference">
@@ -160,14 +162,45 @@
                     alt="" class="person-image">
                 <div class="short-paragraph">
                     <h2>Wesoły Janusz</h2>
-                    <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt turpis et nulla vulputate tempor.
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt turpis et nulla vulputate tempor.
                         Praesent felis nulla, ultricies ut tortor ac, lacinia ullamcorper elit. Aliquam convallis consequat
                         turpis eget vehicula. Nullam dictum urna ac purus volutpat, vel accumsan arcu ultrices. Etiam nec
                         sodales ante, quis tincidunt nisi. Curabitur dapibus diam at diam hendrerit euismod. Donec ut aliquet
-                        lacus.</p>
+                        lacus.
+                    </p>
                 </div>
             </div>
         </div>
+        </div>
+    </section>
+    <section class="container section">
+        <div class="row">
+            <div class="col col-3" id="download">
+                <h1>Do pobrania</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt turpis et nulla vulputate tempor. Praesent felis nulla,
+                    ultricies ut tortor ac, lacinia ullamcorper elit. Aliquam convallis consequat turpis eget vehicula. Nullam
+                    dictum urna ac purus volutpat, vel accumsan arcu ultrices. Etiam nec sodales ante, quis tincidunt nisi.
+                    Curabitur dapibus diam at diam hendrerit euismod. Donec ut aliquet lacus.
+                </p>
+            </div>
+            <div class="col col-3" id="contact">
+                <h1>Kontakt</h1>
+                <div class="column">
+                    <div class="contact-type">
+                        <span class="fa fa-phone fa-2x"></span>
+                        tel. 608 431 666
+                    </div>
+                    <br>
+                    <div class="contact-type">
+                        <span class="fa fa-at fa-2x"></span>
+                        gmplab@interia.pl
+                    </div>
+
+                    <br>
+                </div>
+
+            </div>
         </div>
     </section>
     <footer class="container">
