after add some styles

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                         <a href="#references">Realizacje/referencje</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Do pobrania</a>
+                        <a href="#download">Do pobrania</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Kontakt</a>
+                        <a href="#contact">Kontakt</a>
                     </li>
                 </ul>
             </div>
@@ -173,11 +173,11 @@
         </div>
         </div>
     </section>
-    <section class="container section">
+    <section class="container section col-reverse">
         <div class="row">
             <div class="col col-3" id="download">
                 <h1>Do pobrania</h1>
-                <p>
+                <p class="col-content">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt turpis et nulla vulputate tempor. Praesent felis nulla,
                     ultricies ut tortor ac, lacinia ullamcorper elit. Aliquam convallis consequat turpis eget vehicula. Nullam
                     dictum urna ac purus volutpat, vel accumsan arcu ultrices. Etiam nec sodales ante, quis tincidunt nisi.
@@ -186,7 +186,7 @@
             </div>
             <div class="col col-3" id="contact">
                 <h1>Kontakt</h1>
-                <div class="column">
+                <div class="column col-content">
                     <div class="contact-type">
                         <span class="fa fa-phone fa-2x"></span>
                         tel. 608 431 666
