finished styles on main page

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
         </div>
     </section>
-    <section class="container section col-reverse">
+    <section class="container section col-reverse" id="download-contact">
         <div class="row">
             <div class="col col-3" id="download">
                 <h1>Do pobrania</h1>
