--- a/index.html
+++ b/index.html
@@ -59,27 +59,81 @@
     </nav>
     <section class="slider">
         <div class="slide" id="first">
+            <div class="black"></div>
             <div class="content">Lorem ipsum dolor sit amet</div>
         </div>
         <div class="slide" id="second">
+            <div class="black"></div>
             <div class="content">Lorem ipsum dolor sit amet</div>
         </div>
 
         <div class="slide" id="third">
+            <div class="black"></div>
             <div class="content">Lorem ipsum dolor sit amet</div>
         </div>
         <!-- Navigation arrows -->
-        <span class="arrow arrow-left" onclick="changeSlide(1)">Left</span>
-        <span class="arrow arrow-right" onclick="changeSlide(-1)">Right</span>
+        <span class="arrow arrow-left" onclick="changeSlide(-1)">Left</span>
+        <span class="arrow arrow-right" onclick="changeSlide(1)">Right</span>
     </section>
     <script type="text/javascript">  
-        let array = []
         let slides = document.querySelectorAll('.slide')
-        array = slides
+        let now = 0
+        let intervals = []
         function changeSlide(i) {
-            console.log(i)
+            let pos = 0
+            if (i === 1) {
+                move(slides[now], -100)
+                move(slides[now + 1], -100)
+                track(slides[now - 1], 100)
+                now++;
+            } else {
+                move(slides[now], 100)
+                move(slides[now - 1], 100)
+                track(slides[now - 1], -100)
+                now--;
+            }
         }
-</script> 
+
+        function move(element, to) {
+            console.log(element)
+            if (to < 0) {
+                let index = 0
+                let k = intervals.length
+                intervals[k] = setTimeout(() => {
+                    index++
+                    if (index === -100) {
+                        clearInterval(intervals[k])
+                    } else {
+                        index--
+                        element.style.left = index + '%'
+                    }
+                }, 1)
+
+            } else if (to > 0) {
+                let index = 0
+                let k = intervals.length
+                intervals[k] = setTimeout(() => {
+                    index++
+                    if (index === 100) {
+                        clearInterval(intervals[k])
+                    } else {
+                        index++
+                        element.style.left = index + '%'
+                    }
+                }, 1)
+            }
+        }
+
+        function track(element, to) {
+
+        }
+
+        function moveToLeft(pos, callback) {
+            callback()
+            slides[now].style.left = pos + '%'
+            console.log(slides[now].style)
+        }
+    </script>
 </body>
 
 </html>
